@@ -177,9 +177,9 @@ void resize_clock (void *obj)
    if (new_width > clock->area.width || new_width < (clock->area.width-6)) {
       Panel *panel = ((Area*)obj)->panel;
 
-      printf("clock_width %d, new_width %d\n", clock->area.width, new_width);
       // resize clock
       // we try to limit the number of resize
+      // printf("clock_width %d, new_width %d\n", clock->area.width, new_width);
       clock->area.width = new_width + 1;
       clock->area.posx = panel->area.width - clock->area.width - panel->area.paddingxlr - panel->area.pix.border.width;
 
